May 24; fixed a bug with the Login component - the button to switch to registering a user was not actuall switching the state that determined which API call to make; also fixed a bit of CSS - the register requirements were not visible on screen

--- a/public/style.css
+++ b/public/style.css
@@ -254,7 +254,7 @@ footer {
 
 #register-requirements {
     display: none;
-    color: gray;
+    color: white;
     font-size: .75rem;
 }
 
